Updated job period

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       </div>
 
       <div class="resume-date text-md-right">
-        <span class="text-primary">August 2019 - Present</span>
+        <span class="text-primary">October 2019 - Present</span>
       </div>
     </div>
 
@@ -163,7 +163,7 @@
           </div>
 
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2019 - Present</span>
+            <span class="text-primary">August 2019 - September 2019</span>
           </div>
         </div>
 
