Added CTO position

--- a/index.html
+++ b/index.html
@@ -94,10 +94,16 @@
         <div class="subheading mb-5">Helsinki · Finland · <a href="tel:+3584578722133">(358) 45 787 22 133</a> ·
           <a href="mailto:mojjammil@gmail.com">mojjammil@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am a novice software developer currently working towards building a solid foundation of
+        <p class="lead mb-5">
+          A software developer with background in business, finance, marketing and marketing research now working
+          as a future tech talents enabler. Life is a continuous learning experience and an adventure I am always looking forward to.
+          
+          <!-- OLD INTRO
+          I am a novice software developer currently working towards building a solid foundation of
           becoming a competent programmer. My previous experience allows me to connect the dots between user data and
-          illustrate customer insights, which is why I am also interested in Data Science in the future. </p>
-        <p class="lead mb-5">I committed to the <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd"
+          illustrate customer insights, which is why I am also interested in Data Science in the future.--> 
+        </p>
+        <p class="lead mb-5">I previously committed to the <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd"
             target="_blank">#100DaysOfCode</a> and <a href="https://twitter.com/search?q=%40tanzilcodes%20%23301daysofcode&src=typd"
             target="_blank">#301DaysOfCode</a>
           challenges.
@@ -126,17 +132,35 @@
     <!-- Beginning of position section -->
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-1">Tech Lead</h3>
+        <h3 class="mb-1">CTO</h3>
         <div class="subheading mb-3">The Shortcut</div>
         <p class="mb-2"><a href="https://theshortcut.org/" target="_blank">The Shortcut</a> is a talent accelerator with the goal to help people improve their skills and acquire new ones in order to enter the tech world by either creating a startup or joining one. 
           It is a non-profit organization part of Startup Foundation sr. and a sister organization to Slush, Maria 01, Wave Ventures and Junction.<br>
-          I am primarily responsible for managing all the tech products, projects, trainings and leading the tech team. I am also involved with the data team working on building and managing data management tool.
+          In addition to leading and managing all the tech operations, I am involved in organizational strategic direction and guidance from tech and data point of view. 
           <br class="mb-2">
 
       </div>
 
       <div class="resume-date text-md-right">
-        <span class="text-primary">October 2019 - Present</span>
+        <span class="text-primary">February 2020 - Present</span>
+      </div>
+    </div>
+
+    <!-- End of position section -->
+
+    <!-- Beginning of position section -->
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
+        <h3 class="mb-1">Tech Lead</h3>
+        <div class="subheading mb-3">The Shortcut</div>
+        <p class="mb-2">
+          I was primarily responsible for managing all the tech products, projects, trainings and leading the tech team. I am also involved with the data team working on building and managing data management tool.
+          <br class="mb-2">
+
+      </div>
+
+      <div class="resume-date text-md-right">
+        <span class="text-primary">October 2019 - February 2020</span>
       </div>
     </div>
 
