--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128628216-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-128628216-1');
-    </script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-128628216-1');
+  </script>
 
 </head>
 
@@ -96,31 +99,36 @@
         </div>
         <p class="lead mb-5">
           A software developer with background in business, finance, marketing and marketing research now working
-          as a future tech talents enabler. Life is a continuous learning experience and an adventure I am always looking forward to.
-          
+          as a future tech talents enabler. Life is a continuous learning experience and an adventure I am always
+          looking forward to.
+
           <!-- OLD INTRO
           I am a novice software developer currently working towards building a solid foundation of
           becoming a competent programmer. My previous experience allows me to connect the dots between user data and
-          illustrate customer insights, which is why I am also interested in Data Science in the future.--> 
+          illustrate customer insights, which is why I am also interested in Data Science in the future.-->
         </p>
-        <p class="lead mb-5">I previously committed to the <a href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd"
-            target="_blank">#100DaysOfCode</a> and <a href="https://twitter.com/search?q=%40tanzilcodes%20%23301daysofcode&src=typd"
+        <p class="lead mb-5">I previously committed to the <a
+            href="https://twitter.com/search?q=%23100DaysOfCode%20%40TanzilCodes&src=typd"
+            target="_blank">#100DaysOfCode</a> and <a
+            href="https://twitter.com/search?q=%40tanzilcodes%20%23301daysofcode&src=typd"
             target="_blank">#301DaysOfCode</a>
           challenges.
-        <div class="social-icons">
-          <a href="https://www.linkedin.com/in/mojjammil/" target="_blank" tooltip="LinkedIn" tooltip-position="bottom">
-            <p class="fab fa-linkedin-in"></p>
-          </a>
-          <a href="https://github.com/mojjammil" target="_blank" tooltip="GitHub" tooltip-position="bottom">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="https://www.freecodecamp.org/mojjammil" target="_blank" tooltip="FreeCodeCamp" tooltip-position="bottom">
-            <i class="fab fa-free-code-camp"></i>
-          </a>
-          <a href="https://twitter.com/TanzilCodes" target="_blank" tooltip="Twitter" tooltip-position="bottom">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </div>
+          <div class="social-icons">
+            <a href="https://www.linkedin.com/in/mojjammil/" target="_blank" tooltip="LinkedIn"
+              tooltip-position="bottom">
+              <p class="fab fa-linkedin-in"></p>
+            </a>
+            <a href="https://github.com/mojjammil" target="_blank" tooltip="GitHub" tooltip-position="bottom">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.freecodecamp.org/mojjammil" target="_blank" tooltip="FreeCodeCamp"
+              tooltip-position="bottom">
+              <i class="fab fa-free-code-camp"></i>
+            </a>
+            <a href="https://twitter.com/TanzilCodes" target="_blank" tooltip="Twitter" tooltip-position="bottom">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
     </section>
 
     <hr class="m-0">
@@ -129,51 +137,82 @@
       <div class="my-auto">
         <h2 class="mb-2">Experience</h2>
 
-    <!-- Beginning of position section -->
-    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-      <div class="resume-content mr-auto">
-        <h3 class="mb-1">CTO</h3>
-        <div class="subheading mb-3">The Shortcut</div>
-        <p class="mb-2"><a href="https://theshortcut.org/" target="_blank">The Shortcut</a> is a talent accelerator with the goal to help people improve their skills and acquire new ones in order to enter the tech world by either creating a startup or joining one. 
-          It is a non-profit organization part of Startup Foundation sr. and a sister organization to Slush, Maria 01, Wave Ventures and Junction.<br>
-          In addition to leading and managing all the tech operations, I am involved in organizational strategic direction and guidance from tech and data point of view. 
-          <br class="mb-2">
+        <!-- Beginning of position section -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-1">CTO</h3>
+            <div class="subheading mb-3">The Shortcut</div>
+            <p class="mb-2"><a href="https://theshortcut.org/" target="_blank">The Shortcut</a> is a talent accelerator
+              with the goal to help people improve their skills and acquire new ones in order to enter the tech world by
+              either creating a startup or joining one.
+              It is a non-profit organization part of Startup Foundation sr. and a sister organization to Slush, Maria
+              01, Wave Ventures and Junction.<br>
+              In addition to leading and managing all the tech operations, I am involved in organizational strategic
+              direction and guidance from tech and data point of view.
+              <br class="mb-2">
 
-      </div>
+              <div class="subheading mb-1">Projects</div>
+              <ul class="fa-ul">
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Leading and supervising the <b>Python for Data Analysis</b> training: Python and data analysis libraries
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Leading and supervising the <b>Fullstack JavaScript</b> training: HTML, CSS, JS, React, Node.js, SQL
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Managing internal projects such as company website and database management system: React, WordPress, Django, Postgres
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Supervising the JavaScript and Python coding clubs
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Coordinating in government project tendering, private partnering and startup ecosystem community activities.
+                </li>
+              </ul>
 
-      <div class="resume-date text-md-right">
-        <span class="text-primary">February 2020 - Present</span>
-      </div>
-    </div>
+          </div>
 
-    <!-- End of position section -->
+          <div class="resume-date text-md-right">
+            <span class="text-primary">February 2020 - Present</span>
+          </div>
+        </div>
 
-    <!-- Beginning of position section -->
-    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-      <div class="resume-content mr-auto">
-        <h3 class="mb-1">Tech Lead</h3>
-        <div class="subheading mb-3">The Shortcut</div>
-        <p class="mb-2">
-          I was primarily responsible for managing all the tech products, projects, trainings and leading the tech team. I am also involved with the data team working on building and managing data management tool.
-          <br class="mb-2">
+        <!-- End of position section -->
 
-      </div>
+        <!-- Beginning of position section -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-1">Tech Lead</h3>
+            <div class="subheading mb-3">The Shortcut</div>
+            <p class="mb-2">
+              I was primarily responsible for managing all the tech products, projects, trainings and leading the tech
+              team. I am also involved with the data team working on building and managing data management tool.
+              <br class="mb-2">
 
-      <div class="resume-date text-md-right">
-        <span class="text-primary">October 2019 - February 2020</span>
-      </div>
-    </div>
+          </div>
 
-    <!-- End of position section -->
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2019 - February 2020</span>
+          </div>
+        </div>
 
-    <!-- Beginning of position section -->
+        <!-- End of position section -->
+
+        <!-- Beginning of position section -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-1">Software Developer</h3>
             <div class="subheading mb-3">Snapplication Oy</div>
-            <p class="mb-2">Snapplication Oy specializes in developing PWA for local tourist areas. Currently Lappeenranta City is the client.<br>
-              I primarily worked on understanding the product and front-end using Angular. 
-              I am also working on publishing the PWA on iOS alongside working with many design and promotional materials.
+            <p class="mb-2">Snapplication Oy specializes in developing PWA for local tourist areas. Currently
+              Lappeenranta City is the client.<br>
+              I primarily worked on understanding the product and front-end using Angular.
+              I am also working on publishing the PWA on iOS alongside working with many design and promotional
+              materials.
               <br class="mb-2">
 
               <div class="subheading mb-1">Projects</div>
@@ -205,7 +244,8 @@
               <ul class="fa-ul">
                 <li>
                   <i class="fa-li fa fa-check"></i>
-                  Creathon's (EU sponsored project) <a href="https://creathon.metropolia.fi" target="_blank"><b>website</a></b>:
+                  Creathon's (EU sponsored project) <a href="https://creathon.metropolia.fi"
+                    target="_blank"><b>website</a></b>:
                   WordPress, CSS, HTML, PHP, MySQL
                 </li>
                 <li>
@@ -326,10 +366,12 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Business College, Helsinki</h3>
-            <div class="subheading mb-3">Vocational Qualification of Information and Communications Technology (QIT)</div>
+            <div class="subheading mb-3">Vocational Qualification of Information and Communications Technology (QIT)
+            </div>
             <div>The course was focused on Fullstack JavaScript React Software Development.</div>
-            <a href="https://drive.google.com/file/d/1W9RIiPzKDoQELDP6PZ2yynR1yy5ZApl8/view" target="_blank" tooltip="Click link to see certificate"
-               tooltip-position="top"><u><b>The certificate can be viewed from here.</b></u></a>
+            <a href="https://drive.google.com/file/d/1W9RIiPzKDoQELDP6PZ2yynR1yy5ZApl8/view" target="_blank"
+              tooltip="Click link to see certificate" tooltip-position="top"><u><b>The certificate can be viewed from
+                  here.</b></u></a>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2018 - March 2019</span>
@@ -430,7 +472,8 @@
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <b>Brandwitz'10 Champion</b> - Our team was the champion of one of the largest national level brand management competitions
+            <b>Brandwitz'10 Champion</b> - Our team was the champion of one of the largest national level brand
+            management competitions
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
@@ -441,40 +484,47 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
-            <a href="https://drive.google.com/file/d/1W9RIiPzKDoQELDP6PZ2yynR1yy5ZApl8/view" target="_blank" tooltip="Click link to see certificate"
-               tooltip-position="top"><u><b>QIT Vocational Upper Secondary Certificate</b></u></a>
+            <a href="https://drive.google.com/file/d/1W9RIiPzKDoQELDP6PZ2yynR1yy5ZApl8/view" target="_blank"
+              tooltip="Click link to see certificate" tooltip-position="top"><u><b>QIT Vocational Upper Secondary
+                  Certificate</b></u></a>
           </li>
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
-            <a href="https://drive.google.com/open?id=0B1XoGhdwqoErYWUzSWM4M29RcFE" target="_blank" tooltip="Click link to see certificate"
-              tooltip-position="top"><u><b>International English Language Testing System(IELTS) Certificate</b></u></a>
+            <a href="https://drive.google.com/open?id=0B1XoGhdwqoErYWUzSWM4M29RcFE" target="_blank"
+              tooltip="Click link to see certificate" tooltip-position="top"><u><b>International English Language
+                  Testing System(IELTS) Certificate</b></u></a>
             - Overall score 8.0/9.0 (Speaking module - 8.5/9.0)
           </li>
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
-            <a href="https://drive.google.com/open?id=0B1XoGhdwqoEreG5Cb1dBU1g4NmM" target="_blank" tooltip="Click link to see certificate"
-              tooltip-position="right"><u><b>Gamification</b></u></a> - Provided by Coursera in association with
+            <a href="https://drive.google.com/open?id=0B1XoGhdwqoEreG5Cb1dBU1g4NmM" target="_blank"
+              tooltip="Click link to see certificate" tooltip-position="right"><u><b>Gamification</b></u></a> - Provided
+            by Coursera in association with
             University of Pennsylvania
           </li>
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
-            <a href="https://www.sololearn.com/Certificate/1014-2147823/pdf/" target="_blank" tooltip="Click link to see certificate"
-              tooltip-position="right"><u><b>HTML Fundamentals Course</b></u></a> - Provided by SoloLearn
+            <a href="https://www.sololearn.com/Certificate/1014-2147823/pdf/" target="_blank"
+              tooltip="Click link to see certificate" tooltip-position="right"><u><b>HTML Fundamentals
+                  Course</b></u></a> - Provided by SoloLearn
           </li>
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
-            <a href="https://www.sololearn.com/Certificate/1024-2147823/pdf/" target="_blank" tooltip="Click link to see certificate"
-              tooltip-position="right"><u><b>JavaScript Tutorials Course</b></u></a> - Provided by SoloLearn
+            <a href="https://www.sololearn.com/Certificate/1024-2147823/pdf/" target="_blank"
+              tooltip="Click link to see certificate" tooltip-position="right"><u><b>JavaScript Tutorials
+                  Course</b></u></a> - Provided by SoloLearn
           </li>
           <li>
-              <i class="fa-li fa fa-file-alt text-warning"></i>
-              <a href="https://www.sololearn.com/Certificate/1073-2147823/pdf/" target="_blank" tooltip="Click link to see certificate"
-                tooltip-position="right"><u><b>Python 3 Tutorials Course</b></u></a> - Provided by SoloLearn
-            </li>
+            <i class="fa-li fa fa-file-alt text-warning"></i>
+            <a href="https://www.sololearn.com/Certificate/1073-2147823/pdf/" target="_blank"
+              tooltip="Click link to see certificate" tooltip-position="right"><u><b>Python 3 Tutorials
+                  Course</b></u></a> - Provided by SoloLearn
+          </li>
           <li>
             <i class="fa-li fa fa-file-alt text-warning"></i>
-            <a href="https://www.sololearn.com/Certificate/1080-2147823/pdf/" target="_blank" tooltip="Click link to see certificate"
-              tooltip-position="right"><u><b>C# Tutorials Course</b></u></a> - Provided by SoloLearn
+            <a href="https://www.sololearn.com/Certificate/1080-2147823/pdf/" target="_blank"
+              tooltip="Click link to see certificate" tooltip-position="right"><u><b>C# Tutorials Course</b></u></a> -
+            Provided by SoloLearn
           </li>
         </ul>
       </div>
@@ -499,15 +549,19 @@
         <p>I am a <b>positivist</b> which is why I also often enjoy watching and talking about motivational
           philosophies. Rhonda Byrne's <i><b>The Secret</b></i> &amp; <i><b>The Power</b></i> are one of my biggest
           influences.</p>
-        <p>I am not a movie buff but have a few favorites such as <a href="https://en.wikipedia.org/wiki/The_Pursuit_of_Happyness"
-            target="_blank"><b>The Pursuit of Happyness.</b></a></p>
-        <p>Also, being a techie, I can't help but consider <b><a href="https://www.imdb.com/title/tt4158110/" target="_blank">Mr.
+        <p>I am not a movie buff but have a few favorites such as <a
+            href="https://en.wikipedia.org/wiki/The_Pursuit_of_Happyness" target="_blank"><b>The Pursuit of
+              Happyness.</b></a></p>
+        <p>Also, being a techie, I can't help but consider <b><a href="https://www.imdb.com/title/tt4158110/"
+              target="_blank">Mr.
               Robot</a></b>, <b><a href="https://www.imdb.com/title/tt2575988/?ref_=fn_al_tt_1" target="_blank">HBO's
-              Silicon Valley</a></b>, and <b><a href="https://www.imdb.com/title/tt2543312/?ref_=nv_sr_1" target="_blank">Halt
+              Silicon Valley</a></b>, and <b><a href="https://www.imdb.com/title/tt2543312/?ref_=nv_sr_1"
+              target="_blank">Halt
               and Catch Fire</a></b> to be one of my most favorite TV shows as well.</p>
-        <p>I enjoy working out even though I sadly haven't been able to do so on a regular basis lately due to tight
-          work and class schedule. Having poor metabolism genetically, I always struggled to keep my weight low without
-          working out. However, I once lost 30 kgs within 4 months while raising muscle mass at the same time.</p>
+        <p>I am a <b>fitness geek</b>. I never missed a single day of workout ever since I got back to my routine in
+          2019. I
+          have been actively successfully losing weight while raising muscle mass.
+        </p>
       </div>
     </section>
 
