--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 
   <title>| Mojjammil Khandker |</title>
 
+  
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Mojjammil's Website" />
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="mojjammil" />
+  <meta itemprop="description" content="Mojjammil's Website" />
+  <meta itemprop="image" content="img/screenshot.png" />
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://mojjammil.github.io" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="mojjammil" />
+  <meta property="og:description" content="Website of mojjammil" />
+  <meta property="og:image" content="img/screenshot.png" />
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="mojjammil" />
+  <meta name="twitter:description" content="Website of mojjammil" />
+  <meta name="twitter:image" content="img/screenshot.png" />
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
