square og image

--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Mojjammil's Website" />
 
+  <html lang="en" prefix="og: http://ogp.me/ns#"></html>
+
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="mojjammil" />
   <meta itemprop="description" content="Mojjammil's Website" />
-  <meta itemprop="image" content="img/screenshot.png" />
+  <meta itemprop="image" content="img/screenshot-square.png" />
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://mojjammil.github.io" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="mojjammil" />
   <meta property="og:description" content="Website of mojjammil" />
-  <meta property="og:image" content="img/screenshot.png" />
+  <meta property="og:image" content="img/screenshot-square.png" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="mojjammil" />
   <meta name="twitter:description" content="Website of mojjammil" />
-  <meta name="twitter:image" content="img/screenshot.png" />
+  <meta name="twitter:image" content="img/screenshot-square.png" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
