--- a/index.html
+++ b/index.html
@@ -163,6 +163,40 @@
         <!-- Beginning of position section -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-1">SW Developer</h3>
+            <div class="subheading mb-3">Nokia</div>
+              <ul class="fa-ul">
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Working as R&D Engineer for Nokia's <a href="https://www.nokia.com/networks/products/network-operations-master/#overview" target="_blank"><b>Network Operations Master.</b></a>
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Contribute in UX development discussion on regular basis and took part in system testing.
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Active with Nokia's Young Professional Network community to organize and plan
+                  activities.
+                </li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Technologies: React, Spring Boot, Go, Kubernetes, Docker, Jenkins.
+                </li>
+              </ul>
+
+          </div>
+
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2020 - Present</span>
+          </div>
+        </div>
+
+        <!-- End of position section -->
+
+        <!-- Beginning of position section -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-1">CTO</h3>
             <div class="subheading mb-3">The Shortcut</div>
             <p class="mb-2"><a href="https://theshortcut.org/" target="_blank">The Shortcut</a> is a talent accelerator
@@ -202,7 +236,7 @@
           </div>
 
           <div class="resume-date text-md-right">
-            <span class="text-primary">February 2020 - Present</span>
+            <span class="text-primary">February 2020 - November 2020</span>
           </div>
         </div>
 
