Updated Sep 2021 role

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <!-- Beginning of position section -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-1">SW Developer</h3>
+            <h3 class="mb-1">SW Engineer</h3>
             <div class="subheading mb-3">Nokia</div>
               <ul class="fa-ul">
                 <li>
